src/test/ui/nll/ty-outlives/impl-trait-outlives.stderr
warning: not reporting region error due to -Znll
  --> $DIR/impl-trait-outlives.rs:18:35
   |
18 | fn no_region<'a, T>(x: Box<T>) -> impl Debug + 'a
   |                                   ^^^^^^^^^^^^^^^

warning: not reporting region error due to -Znll
  --> $DIR/impl-trait-outlives.rs:34:42
   |
34 | fn wrong_region<'a, 'b, T>(x: Box<T>) -> impl Debug + 'a
   |                                          ^^^^^^^^^^^^^^^

error: failed type test: TypeTest { generic_kind: T/#1, lower_bound: '_#1r, point: bb0[0], span: $DIR/impl-trait-outlives.rs:23:5: 23:6, test: IsOutlivedByAnyRegionIn(['_#2r]) }
  --> $DIR/impl-trait-outlives.rs:23:5
   |
23 |     x
   |     ^

error: failed type test: TypeTest { generic_kind: T/#2, lower_bound: '_#1r, point: bb0[0], span: $DIR/impl-trait-outlives.rs:39:5: 39:6, test: IsOutlivedByAnyRegionIn(['_#2r, '_#3r]) }
  --> $DIR/impl-trait-outlives.rs:39:5
   |
39 |     x
   |     ^

error: aborting due to 2 previous errors

